<resources>
    <string name="app_name">My Demo Second App</string>
    <string name="registration_form">Registration Form</string>
    <string name="gender">Gender</string>
    <string name="full_name">Full name</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="student_id">Student ID</string>
    <string name="school">School</string>
    <string name="email">Email</string>
    <string name="register">register</string>
    <string name="phone">Phone</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning Club!</string>
</resources>